--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ main>h1 {
     justify-content: start;
     align-items: center;
     flex-wrap: nowrap;
+    gap: 1rem;
     /* outline: 2px solid lawngreen; */
     height: 40%;
     margin-top: 3vh;
@@ -127,6 +128,7 @@ main>h1 {
     aspect-ratio: 175/187;
     background-image: url(./assets/images/—Pngtree—cute\ post-it\ note\ elements_5324193.png);
     /* outline: 2px solid rebeccapurple; */
+    position: relative;
     background-size: cover;
     padding: 2.25%;
     flex-shrink: 0;
@@ -146,23 +148,46 @@ main>h1 {
     overflow: hidden;
     text-overflow: ellipsis;
     margin-bottom: 8%;
-    line-clamp: 2;
-    -webkit-line-clamp: 2;
-    display: -webkit-box;
+    line-clamp: 3;
+    -webkit-line-clamp: 3;
+    /* display: -webkit-box; */
     -webkit-box-orient: vertical;
     font-size: min(20px,4vw);
 }
 .todos-list>.todo-card>.todo-desc{
     display: -webkit-box;
     width: 100%;
-    line-clamp: 6;
-    -webkit-line-clamp: 6;
+    line-clamp: 9;
+    -webkit-line-clamp: 9;
     -webkit-box-orient: vertical;
     /* background: rgb(78, 78, 150); */
     /* height: 75%; */
     text-overflow: ellipsis;
     overflow: hidden;
     font-size: min(16px,3.5vw);
+}
+
+.todos-list>.todo-card>.delete-todo{
+    position: absolute;
+    top: 25px;
+    right: 0px;
+    color: red;
+    font-size: 150%;
+    opacity: 0;
+    transition: .3s;
+    background: rgb(255, 198, 177);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.todos-list>.todo-card>.delete-todo ion-icon{
+    font-size: 150%;
+    padding: .25rem;
+}
+.todos-list>.todo-card:hover .delete-todo{
+    transition: .3s;
+    opacity: 1;
 }
 /****************** todos-list and todos code end ****************************/
 
@@ -213,7 +238,9 @@ main>h1 {
     main {
         padding: 1vh 2vw;
     }
-
+    .todo-list{
+        gap: .5rem;
+    }
     .dustbin,
     .pages {
         width: 30%;
@@ -222,7 +249,7 @@ main>h1 {
 }
 
 /************** page-animator modal ************/
-.page-animator {
+.page-animator,.delete-animator {
     width: 100%;
     height: 100%;
     position: fixed;
@@ -320,4 +347,65 @@ button[type="submit"] {
 .page-animator>.todo-form>
 button[type="submit"]:hover {
     background-color: #218838;
+}
+
+
+/************ delete animator ///////////*/
+
+/* .delete-animator{
+    display: block;
+}
+.delete-animator>img {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    right: 50%;
+    bottom: 50%;
+    transition: 1s;
+    transform: scale(3) rotateX(0deg) rotate(0deg) translateZ(0) translate(5%, 25%);
+}
+
+.delete-animator>img.animate{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    bottom: 0;
+    left: 0;
+    transform: scale(1) rotateX(50deg) rotate(-390deg) translateZ(70px);
+    opacity: 0;
+    transition: 1s;}
+*/
+/* outline: 2px solid lime;     */
+
+.delete-animator {
+    opacity: 0;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+    display: block;
+    pointer-events: none;
+}
+
+.delete-animator.show {
+    opacity: 1;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+.delete-animator > img {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    right: 50%;
+    bottom: 50%;
+    transition: 1s;
+    transform: scale(3) rotateX(0deg) rotate(0deg) translateZ(0) translate(5%, 25%);
+}
+
+.delete-animator > img.animate {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    bottom: 0;
+    left: 0;
+    transform: scale(1) rotateX(50deg) rotate(-390deg) translateZ(70px);
+    opacity: 0.2;
+    transition: 1s;
 }
